# twoComponentLiquidFoam

./: .gitignore  MyrhoPimpleAdiabaticFoam.C  ReadMe.md  UEqn.H  contError.H  createFields.H  pEqn.H  postpocessing.py  resetBoundaries.H  rhoEqn_m.H  rhoUEqn.H  twoComponentLiquidFoam.C  twoComponentLiquidFoam_doc.tex
Make/: files
Make/linux64GccDPInt32Opt/: MyrhoPimpleAdiabaticFoam.C.dep  sourceFiles  twoComponentLiquidFoam.C.dep  variables
cases/attractor/: log.MyrhoPimpleAdiabaticFoam  log.blockMesh  log.setFields
cases/attractor/0.001/: T  U  p  phi  phiByRho  rho
cases/attractor/0.002/: T  U  p  phi  phiByRho  rho
cases/attractor/0.003/: T  U  p  phi  phiByRho  rho
cases/attractor/0.orig/: T  U  p  rho
cases/attractor/constant/: caseProperties
cases/attractor/system/: blockMeshDict  controlDict  fvSchemes  fvSolution  init_rho.py  setFieldsDict
cases/column/: rho.avi
cases/column/0.orig/: U  rho
cases/column/system/: blockMeshDict  controlDict  fvSchemes  setFieldsDict
cases/pitzDaily/: postpocessing.py
cases/pitzDaily/0.orig/: U  p  rho
cases/pitzDaily/system/: controlDict  fvSchemes  fvSolution  setFieldsDict
doc/: twoComponentLiquidFoam_doc.tex
oneD/: oneDsolver.py
oneD/C/: one  oneDsolver.c  sex.py  sex2.py  show.py
rutlandVortex2D/: Allrun
rutlandVortex2D/0.orig/: U  p  rho
rutlandVortex2D/system/: blockMeshDict  controlDict  fvSchemes  fvSolution  setFieldsDict
twoComponentLiquid/application/oneDim/: CMakeLists.txt  input_par.txt  oneDim.c  postprocessing.py
twoComponentLiquid/application/twoDim/: CMakeLists.txt  input_par.txt  postprocessing.py  rho.txt  twoDim.c
twoComponentLiquid/include/: LS_solvers.h  basic_type.h  constants.h  initialize.h  save.h  step.h
twoComponentLiquid/src/: LS_solvers.c  initialize.c  save.c  step.c
(+28 files in other folders)
